--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         }
     </style>
 </head>
-<body>
+<body onload="showLoader()">
+    <div id="loader" style="position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%);">
+        <div class="spinner-border text-primary" role="status">
+            <span class="sr-only">Cargando...</span>
+        </div>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#" style="font-style: italic; font-family: 'Montserrat', sans-serif; font-style: italic;">Tu Leyenda</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +42,7 @@
         </div>
     </nav>
 
-    <div id="content" class="container mt-4 mb-5" style="min-height: calc(100vh - 100px);">
+    <div id="content" class="container mt-4 mb-5" style="min-height: calc(100vh - 100px); display: none;">
         <!-- El contenido se actualizará aquí -->
     </div>
 
@@ -115,6 +120,15 @@
         // Función para navegar entre las "páginas" de la SPA
         function navigate(page) {
             document.getElementById('content').innerHTML = pages[page];
+        }
+
+        // Función para mostrar el loader hasta que el contenido esté cargado
+        function showLoader() {
+            setTimeout(() => {
+                document.getElementById('loader').style.display = 'none';
+                document.getElementById('content').style.display = 'block';
+                navigate('home');
+            }, 2000); // Ajusta el tiempo según sea necesario
         }
 
         // Inicializar la página mostrando la sección de inicio
