--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body onload="showLoader()">
-    <div id="loader" style="position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%);">
+    <div id="loader" style="position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 9999;">
         <div class="spinner-border text-primary" role="status">
             <span class="sr-only">Cargando...</span>
         </div>
@@ -42,7 +42,7 @@
         </div>
     </nav>
 
-    <div id="content" class="container mt-4 mb-5" style="min-height: calc(100vh - 100px); display: none;">
+    <div id="content" class="container mt-4 mb-5" style="min-height: calc(100vh - 150px); display: none;">
         <!-- El contenido se actualizará aquí -->
     </div>
 
@@ -134,7 +134,7 @@
         // Inicializar la página mostrando la sección de inicio
         navigate('home');
     </script>
-    <footer class="footer bg-dark text-white text-center py-4 footer-fixed" style="position: relative; bottom: 0; width: 100%;">
+    <footer class="footer bg-dark text-white text-center py-4 footer-fixed" style="position: absolute; bottom: 0; width: 100%;">
         <div class="container">
             <span>Hecho por Federico Goncalvez. Todos los derechos reservados.</span>
         </div>
