--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </nav>
 
-    <div id="content" class="container mt-4 mb-5" style="min-height: calc(100vh - 200px); display: none;">
+    <div id="content" class="container mt-4 mb-5" style="min-height: calc(100vh - 300px); display: none;">
         <!-- El contenido se actualizará aquí -->
     </div>
 
@@ -134,10 +134,24 @@
         // Inicializar la página mostrando la sección de inicio
         navigate('home');
     </script>
-    <footer class="footer bg-dark text-white text-center py-4 footer-fixed" style="position: fixed; bottom: 0; width: 100%;">
+    <footer class="footer bg-dark text-white text-center py-4" style="position: relative; width: 100%;">
         <div class="container">
             <span>Hecho por Federico Goncalvez. Todos los derechos reservados.</span>
         </div>
     </footer>
+<script>
+        // Asegurar que el footer esté al final si el contenido no llena la pantalla
+        document.addEventListener('DOMContentLoaded', function() {
+            const content = document.getElementById('content');
+            const footer = document.querySelector('footer');
+            if (document.body.scrollHeight <= window.innerHeight) {
+                footer.style.position = 'fixed';
+                footer.style.bottom = '0';
+                footer.style.width = '100%';
+            } else {
+                footer.style.position = 'relative';
+            }
+        });
+    </script>
 </body>
 </html>
