--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             const content = document.getElementById('content');
             const footer = document.querySelector('footer');
             if (document.body.scrollHeight <= window.innerHeight) {
-                footer.style.position = 'fixed';
+                footer.style.position = 'booton';
                 footer.style.bottom = '0';
                 footer.style.width = '100%';
             } else {
