--- a/index.html
+++ b/index.html
@@ -59,13 +59,28 @@
                 <div class="container mt-5 mb-5">
     <div class="row">
         <div class="col-lg-8 mb-4">
-            $1
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h2 class="card-title">Nuestra Historia</h2>
+                    <p class="card-text">Tu Leyenda Tallados surge en 2020 con la intención de diseñar y elaborar piezas en madera para diversos fines, principalmente enfocándonos en la personalización y la alta durabilidad de nuestros materiales.</p>
+                </div>
+            </div>
         </div>
         <div class="col-lg-4 mb-4">
-            $2
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h2 class="card-title">Nuestro Enfoque</h2>
+                    <p class="card-text">Nuestro enfoque está en diseñar letreros que cumplan una doble función: no solo indican una ubicación, sino que también reflejan la identidad y los valores de quienes los eligen, creando una conexión auténtica con el entorno.</p>
+                </div>
+            </div>
         </div>
         <div class="col-lg-12 mb-4">
-            $3
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h2 class="card-title">Nuestros Valores</h2>
+                    <p class="card-text">Valoramos la transparencia, el trabajo en equipo y la sostenibilidad. Estamos comprometidos a brindar siempre lo mejor, respetando tanto a nuestros clientes como al medio ambiente.</p>
+                </div>
+            </div>
         </div>
     </div>
                 </div>
