--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
                     <a class="nav-link" href="#home" onclick="navigate('home')">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about" onclick="navigate('product')">Productos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#about" onclick="navigate('service')">Servicios</a>
+                    <a class="nav-link" href="#about" onclick="navigate('source')">Recursos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact" onclick="navigate('contact')">Contacto</a>
@@ -86,7 +83,7 @@
                 </div>
         
             `,
-            products: `
+            source: `
                 <div class="card">
                     <div class="card-body">
                         <h1 class="card-title">Sobre Nosotros</h1>
@@ -94,14 +91,7 @@
                     </div>
                 </div>
             `,
-          service: `
-                <div class="card">
-                    <div class="card-body">
-                        <h1 class="card-title">Sobre Nosotros</h1>
-                        <p class="card-text">Somos una empresa dedicada a la innovación y desarrollo de soluciones tecnológicas.</p>
-                    </div>
-                </div>
-            `,
+          
             contact: `
     <div class="card mb-4">
         <div class="card-body">
