--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img src="images/image.jpg" class="img-fluid w-100" alt="Imagen principal" style="max-height: 500px; object-fit: cover;">
                 </div>
                 <div class="container mt-5 mb-5">
-    <div class="row">
+    <div class="row no-gutters">
         <div class="col-lg-8 mb-4">
             <div class="card mb-4">
                 <div class="card-body">
