--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         // Definición del contenido de cada página
         const pages = {
             source: `
-                <div class="card mb-4">
+                <div class="card mb-4 flex-fill">
                     <div class="card-body">
                         <h1 class="card-title">Recursos</h1>
                         <p class="card-text">En esta sección encontrarás todos los recursos necesarios para conocer más sobre nuestro trabajo, incluyendo guías, referencias, y material complementario.</p>
@@ -64,25 +64,25 @@
                     <img src="images/image.jpg" class="img-fluid w-100" alt="Imagen principal" style="max-height: 500px; object-fit: cover;">
                 </div>
                 <div class="container mt-5 mb-5">
-    <div class="row no-gutters">
-        <div class="col-lg-8 mb-4">
-            <div class="card mb-4">
+    <div class="row d-flex flex-wrap align-items-stretch">
+        <div class="col-lg-8 col-md-12 mb-4 d-flex">
+            <div class="card mb-4 flex-fill">
                 <div class="card-body">
                     <h2 class="card-title">Nuestra Historia</h2>
                     <p class="card-text">Tu Leyenda Tallados surge en 2020 con la intención de diseñar y elaborar piezas en madera para diversos fines, principalmente enfocándonos en la personalización y la alta durabilidad de nuestros materiales.</p>
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 mb-4">
-            <div class="card mb-4">
+        <div class="col-lg-4 col-md-6 mb-4 d-flex">
+            <div class="card mb-4 flex-fill">
                 <div class="card-body">
                     <h2 class="card-title">Nuestro Enfoque</h2>
                     <p class="card-text">Nuestro enfoque está en diseñar letreros que cumplan una doble función: no solo indican una ubicación, sino que también reflejan la identidad y los valores de quienes los eligen, creando una conexión auténtica con el entorno.</p>
                 </div>
             </div>
         </div>
-        <div class="col-lg-12 mb-4">
-            <div class="card mb-4">
+        <div class="col-lg-12 col-md-6 mb-4 d-flex">
+            <div class="card mb-4 flex-fill">
                 <div class="card-body">
                     <h2 class="card-title">Nuestros Valores</h2>
                     <p class="card-text">Valoramos la transparencia, el trabajo en equipo y la sostenibilidad. Estamos comprometidos a brindar siempre lo mejor, respetando tanto a nuestros clientes como al medio ambiente.</p>
@@ -94,7 +94,7 @@
         
             `,
             contact: `
-    <div class="card mb-4">
+    <div class="card mb-4 flex-fill">
         <div class="card-body">
             <h1 class="card-title">Solicitar Presupuesto</h1>
             <p class="card-text">Puedes contactarnos a través del correo electrónico para cualquier consulta o solicitar un presupuesto detallado de nuestros productos personalizados.</p>
