--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
         body {
             font-family: 'Montserrat', sans-serif;
         }
+            html, body {
+            height: 100%;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        #content {
+            flex: 1;
+        }
+        footer {
+            margin-top: auto;
+        }
     </style>
 </head>
 <body onload="showLoader()">
@@ -180,7 +193,7 @@
         // Inicializar la página mostrando la sección de inicio
         navigate('home');
     </script>
-    <footer class="footer bg-dark text-white text-center py-4" style="position: fixed; bottom: 0; width: 100%; z-index: 9999;">
+    <footer class="footer bg-dark text-white text-center py-4" style="position: relative; width: 100%;">
         <div class="container">
             <span>Hecho por Federico Goncalvez. Todos los derechos reservados.</span>
         </div>
