--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         #content {
             flex: 1;
         }
-        footer {
-            margin-top: auto;
-        }
+        
     </style>
 </head>
 <body onload="showLoader()">
@@ -193,7 +191,7 @@
         // Inicializar la página mostrando la sección de inicio
         navigate('home');
     </script>
-    <footer class="footer bg-dark text-white text-center py-4" style="position: relative; width: 100%;">
+    <footer class="footer bg-dark text-white text-center py-4" >
         <div class="container">
             <span>Hecho por Federico Goncalvez. Todos los derechos reservados.</span>
         </div>
