--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         #content {
             flex: 1;
         }
-        
+        footer {
+            margin-top: auto;
+        }
     </style>
 </head>
 <body onload="showLoader()">
@@ -191,7 +193,7 @@
         // Inicializar la página mostrando la sección de inicio
         navigate('home');
     </script>
-    <footer class="footer bg-dark text-white text-center py-4" >
+    <footer class="footer bg-dark text-white text-center py-4" style="position: relative; width: 100%;">
         <div class="container">
             <span>Hecho por Federico Goncalvez. Todos los derechos reservados.</span>
         </div>
