--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </div>
                         <div class="col-md-6 col-lg-4 mb-4">
                             <div class="card">
-                                <img src="images/tallado_hundido.jpg" class="card-img-top" alt="Tallado Hundido">
+                                <img src="images/imagen2.jpg" class="card-img-top" alt="Tallado Hundido">
                                 <div class="card-body">
                                     <h5 class="card-title">Tallados Hundidos</h5>
                                     <p class="card-text">Técnicas de tallado donde los diseños se esculpen hacia adentro, creando una impresión duradera.</p>
@@ -111,7 +111,7 @@
                         </div>
                         <div class="col-md-6 col-lg-4 mb-4">
                             <div class="card">
-                                <img src="images/murales.jpg" class="card-img-top" alt="Murales">
+                                <img src="images/imagen3.jpg" class="card-img-top" alt="Murales">
                                 <div class="card-body">
                                     <h5 class="card-title">Murales</h5>
                                     <p class="card-text">Grandes obras en madera que capturan paisajes o conceptos artísticos, ideales para destacar cualquier espacio.</p>
