--- a/index.html
+++ b/index.html
@@ -22,17 +22,13 @@
         }
     </style>
 </head>
-<body onload="showLoader()">
-    <div id="loader" style="position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 9999;">
-        <div class="spinner-border text-primary" role="status">
-            <span class="sr-only">Cargando...</span>
-        </div>
+<body>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#" style="font-style: italic; font-family: 'Montserrat', sans-serif; font-style: italic;">Tu Leyenda</a>
+    
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -170,12 +166,7 @@
         }
 
         // Función para mostrar el loader hasta que el contenido esté cargado
-        function showLoader() {
-            setTimeout(() => {
-                document.getElementById('loader').style.display = 'none';
-                document.getElementById('content').style.display = 'block';
-                navigate('home');
-            }, 1000);
+        , 1000);
         } // Ajusta el tiempo según sea necesario
         }
 
