--- a/index.html
+++ b/index.html
@@ -190,5 +190,8 @@
         });
     }
 </script>
+    <a href="https://wa.me/1234567890" target="_blank" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
+        <img src="images/whatsapp_placeholder.png" alt="WhatsApp" style="width: 60px; height: 60px;">
+    </a>
 </body>
 </html>
