--- a/index.html
+++ b/index.html
@@ -5,26 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tu Leyenda</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-       /* Consolidado y optimizado */
-body, html {
-    font-family: 'Montserrat', sans-serif;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-#content {
-    flex: 1;
-    min-height: calc(100vh - 300px); /* Asegura una altura adaptable */
-}
-footer {
-    margin-top: auto; /* Empuja el footer hacia el final */
-}
+    
+    <!-- Carga diferida de Bootstrap (versión moderna) -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-STYLES_HASH" crossorigin="anonymous">
 
-    </style>
+<!-- Preload para fuentes Montserrat -->
+<link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" as="style" onload="this.rel='stylesheet'">
+<noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+</noscript>
+    
 </head>
 <body onload="showLoader()">
     <div id="loader" style="position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 9999;">
