--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tu Leyenda</title>
    <!-- CSS personalizado -->
-<link rel="stylesheet" href="/styles.css">
+<link rel="stylesheet" href="styles/styles.css">
 
 <!-- Carga diferida de Bootstrap (versión moderna) -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-STYLES_HASH" crossorigin="anonymous">
