--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tu Leyenda</title>
    <!-- CSS personalizado -->
-<link rel="stylesheet" href="styles/styles.css">
+
 
 <!-- Carga diferida de Bootstrap (versión moderna) -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-STYLES_HASH" crossorigin="anonymous">
@@ -15,7 +15,22 @@
 <noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
 </noscript>
-    
+    <style>
+       /* Consolidado y optimizado */
+body, html {
+    font-family: 'Montserrat', sans-serif;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+#content {
+    flex: 1;
+    min-height: calc(100vh - 300px); /* Asegura una altura adaptable */
+}
+footer {
+    margin-top: auto; /* Empuja el footer hacia el final */
+} </style>
 </head>
 <body onload="showLoader()">
     <div id="loader" style="position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 9999;">
