--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!-- CSS personalizado -->
 
 <!-- Carga diferida de Bootstrap (versión moderna) -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-STYLES_HASH" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" >
 
 <!-- Preload para fuentes Montserrat -->
 <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" as="style" onload="this.rel='stylesheet'">
