--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         .nav-link.active {
             color: #ffcc00 !important; /* Diferencia la página activa */
         }
+        .navbar-brand {
+        padding-left: 15px; /* Agrega espacio a la izquierda */
+    }
     </style>
 </head>
 <body>
