--- a/index.html
+++ b/index.html
@@ -160,5 +160,10 @@
         // Inicializa la página en "home"
         navigate('home');
     </script>
+    <!-- Botón de WhatsApp -->
+<a href="https://wa.me/XXXXXXXXXXX" class="whatsapp-button" target="_blank" style="position: fixed; bottom: 20px; right: 20px; background-color: #25d366; color: white; border-radius: 50%; padding: 15px; font-size: 24px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); text-align: center;">
+    <i class="fab fa-whatsapp"></i>
+</a>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </body>
 </html>
