--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="row">
                         <div class="col-md-6 col-lg-4 mb-4">
                             <div class="card">
-                                <img src="images/tallado_relieve.jpg" class="card-img-top" alt="Tallado en relieve único de madera">
+                                <img src="/images/imagen1.jpg" class="card-img-top" alt="Tallado en relieve único de madera">
                                 <div class="card-body">
                                     <h5 class="card-title">Tallados en Relieve</h5>
                                     <p class="card-text">Piezas que destacan por detalles elevados, dando vida a diseños personalizados.</p>
@@ -81,7 +81,7 @@
                         </div>
                         <div class="col-md-6 col-lg-4 mb-4">
                             <div class="card">
-                                <img src="images/imagen2.jpg" class="card-img-top" alt="Tallado hundido con diseño moderno">
+                                <img src="/images/imagen2.jpg" class="card-img-top" alt="Tallado hundido con diseño moderno">
                                 <div class="card-body">
                                     <h5 class="card-title">Tallados Hundidos</h5>
                                     <p class="card-text">Técnicas de tallado donde los diseños se esculpen hacia adentro.</p>
@@ -90,7 +90,7 @@
                         </div>
                         <div class="col-md-6 col-lg-4 mb-4">
                             <div class="card">
-                                <img src="images/carteles.jpg" class="card-img-top" alt="Carteles de madera personalizados">
+                                <img src="/images/imagen3.jpg" class="card-img-top" alt="Carteles de madera personalizados">
                                 <div class="card-body">
                                     <h5 class="card-title">Carteles</h5>
                                     <p class="card-text">Carteles de madera personalizados, perfectos para negocios o decoraciones.</p>
