--- a/index.html
+++ b/index.html
@@ -68,37 +68,40 @@
         const pages = {
             catalog: `
                 <div class="container mt-5 mb-5">
-                    <h1 class="mb-4">Catálogo de Tallados</h1>
-                    <div class="row">
-                        <div class="col-md-6 col-lg-4 mb-4">
-                            <div class="card">
-                                <img src="/images/imagen1.jpg" class="card-img-top" alt="Tallado en relieve único de madera">
-                                <div class="card-body">
-                                    <h5 class="card-title">Tallados en Relieve</h5>
-                                    <p class="card-text">Piezas que destacan por detalles elevados, dando vida a diseños personalizados.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4 mb-4">
-                            <div class="card">
-                                <img src="/images/imagen2.jpg" class="card-img-top" alt="Tallado hundido con diseño moderno">
-                                <div class="card-body">
-                                    <h5 class="card-title">Tallados Hundidos</h5>
-                                    <p class="card-text">Técnicas de tallado donde los diseños se esculpen hacia adentro.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4 mb-4">
-                            <div class="card">
-                                <img src="/images/imagen3.jpg" class="card-img-top" alt="Carteles de madera personalizados">
-                                <div class="card-body">
-                                    <h5 class="card-title">Carteles</h5>
-                                    <p class="card-text">Carteles de madera personalizados, perfectos para negocios o decoraciones.</p>
-                                </div>
-                            </div>
-                        </div>
+        <h1 class="mb-4">Catálogo de Tallados</h1>
+        <div class="row">
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card">
+                    <img src="/images/imagen1.jpg" class="card-img-top" alt="Tallado en relieve único de madera">
+                    <div class="card-body">
+                        <h5 class="card-title">Tallados en Relieve</h5>
+                        <p class="card-text">Piezas que destacan por detalles elevados, dando vida a diseños personalizados.</p>
+                        <a href="/productos/detalle?id=1" class="btn btn-outline-primary mt-2">Ver más detalles</a>
                     </div>
                 </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card">
+                    <img src="/images/imagen2.jpg" class="card-img-top" alt="Tallado hundido con diseño moderno">
+                    <div class="card-body">
+                        <h5 class="card-title">Tallados Hundidos</h5>
+                        <p class="card-text">Técnicas de tallado donde los diseños se esculpen hacia adentro.</p>
+                        <a href="/productos/detalle?id=2" class="btn btn-outline-primary mt-2">Ver más detalles</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card">
+                    <img src="/images/imagen3.jpg" class="card-img-top" alt="Carteles de madera personalizados">
+                    <div class="card-body">
+                        <h5 class="card-title">Carteles</h5>
+                        <p class="card-text">Carteles de madera personalizados, perfectos para negocios o decoraciones.</p>
+                        <a href="/productos/detalle?id=3" class="btn btn-outline-primary mt-2">Ver más detalles</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
             `,
             home: `
                 <div class="container mt-5 mb-5">
