--- a/index.html
+++ b/index.html
@@ -3,167 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Leyenda</title>
-
-    <!-- Carga de Bootstrap (versión moderna) -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Fuente Montserrat -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
-
-    <style>
-        /* Consolidado y optimizado */
-        body, html {
-            font-family: 'Montserrat', sans-serif;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-        #content {
-            flex: 1;
-            min-height: calc(100vh - 300px); /* Asegura una altura adaptable */
-        }
-        footer {
-            margin-top: auto; /* Empuja el footer hacia el final */
-        }
-        .nav-link.active {
-            color: #ffcc00 !important; /* Diferencia la página activa */
-        }
-        .navbar-brand {
-        padding-left: 15px; /* Agrega espacio a la izquierda */
-    }
-    </style>
+    <title>SPA Tallados</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#" style="font-style: italic;">Tu Leyenda</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#home" onclick="navigate('home')">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#catalog" onclick="navigate('catalog')">Catálogo</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact" onclick="navigate('contact')">Contacto</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div id="content" class="container mt-4 mb-5">
-        <!-- El contenido se actualizará aquí -->
-    </div>
-
-    <!-- Bootstrap Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+    <div id="content"></div>
     <script>
-        // Definición del contenido de cada página
-        const pages = {
-            catalog: `
-                <div class="container mt-5 mb-5">
-                    <h1 class="mb-4">Catálogo de Tallados</h1>
-                    <div class="row">
-                        <div class="col-md-6 col-lg-4 mb-4">
-                            <div class="card">
-                                <img src="/images/imagen1.jpg" class="card-img-top" alt="Tallado en relieve único de madera">
-                                <div class="card-body">
-                                    <h5 class="card-title">Tallados en Relieve</h5>
-                                    <p class="card-text">Piezas que destacan por detalles elevados, dando vida a diseños personalizados.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4 mb-4">
-                            <div class="card">
-                                <img src="/images/imagen2.jpg" class="card-img-top" alt="Tallado hundido con diseño moderno">
-                                <div class="card-body">
-                                    <h5 class="card-title">Tallados Hundidos</h5>
-                                    <p class="card-text">Técnicas de tallado donde los diseños se esculpen hacia adentro.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4 mb-4">
-                            <div class="card">
-                                <img src="/images/imagen3.jpg" class="card-img-top" alt="Carteles de madera personalizados">
-                                <div class="card-body">
-                                    <h5 class="card-title">Carteles</h5>
-                                    <p class="card-text">Carteles de madera personalizados, perfectos para negocios o decoraciones.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            `,
-            home: `
-                <div class="container mt-5 mb-5">
-                    <img src="images/image.jpg" class="img-fluid w-100" alt="Imagen de tallado principal" style="max-height: 500px; object-fit: cover;">
-                </div>
-                <div class="container mt-5 mb-5">
-                    <div class="row d-flex flex-wrap align-items-stretch">
-                        <div class="col-lg-8 col-md-12 mb-4 d-flex">
-                            <div class="card mb-4 flex-fill">
-                                <div class="card-body">
-                                    <h2 class="card-title">Nuestra Historia</h2>
-                                    <p class="card-text">Tu Leyenda Tallados surge en 2020 con la intención de diseñar y elaborar piezas en madera para diversos fines, principalmente enfocándonos en la personalización y la alta durabilidad de nuestros materiales.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 mb-4 d-flex">
-                            <div class="card mb-4 flex-fill">
-                                <div class="card-body">
-                                    <h2 class="card-title">Nuestro Enfoque</h2>
-                                    <p class="card-text">Diseñamos letreros que cumplen doble función: indicar una ubicación y reflejar identidad.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            `,
-            contact: `
-                <div class="card mb-4 flex-fill">
-                    <div class="card-body">
-                        <h1 class="card-title">Solicitar Presupuesto</h1>
-                        <p class="card-text">Puedes contactarnos para consultas o un presupuesto personalizado.</p>
-                        <form id="contact-form">
-                            <div class="form-group">
-                                <label for="nombre">Nombre</label>
-                                <input type="text" class="form-control" id="nombre" name="user_name" placeholder="Ingresa tu nombre completo">
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Correo Electrónico</label>
-                                <input type="email" class="form-control" id="email" name="user_email" placeholder="tu_email@ejemplo.com">
-                            </div>
-                            <div class="form-group">
-                                <label for="mensaje">Mensaje</label>
-                                <textarea class="form-control" id="mensaje" name="message" rows="4" placeholder="Escribe aquí tu consulta"></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary mt-3">Enviar Solicitud</button>
-                        </form>
-                    </div>
-                </div>
-            `
-        };
+        // Definición de productos simplificada
+        const products = [
+            { id: 1, title: "Tallados en Relieve", image: "imagen1", description: "Piezas que destacan por detalles elevados, ideales para decoración." },
+            { id: 2, title: "Tallados Hundidos", image: "imagen2", description: "Diseños esculpidos hacia adentro, perfectos para un toque moderno." },
+            { id: 3, title: "Carteles Pintados", image: "imagen3", description: "Carteles personalizados para negocios o decoraciones." }
+        ];
 
-        // Función para cambiar entre páginas y marcar la navegación activa
-        function navigate(page) {
-            document.getElementById('content').innerHTML = pages[page];
-            document.querySelectorAll('.nav-link').forEach(link => link.classList.remove('active'));
-            document.querySelector(`[href="#${page}"]`).classList.add('active');
+        // Definición de páginas
+        class Page {
+            constructor(content) {
+                this.content = content;
+            }
+
+            render() {
+                return this.content;
+            }
         }
 
+        const pages = {
+            home: new Page(`
+                <div>
+                    <img src="images/image.jpg" alt="Imagen de tallado principal">
+                    <div>
+                        <div>
+                            <h2>Nuestra Historia</h2>
+                            <p>Tu Leyenda Tallados surge en 2020 con el propósito de diseñar piezas de madera personalizadas y duraderas.</p>
+                        </div>
+                        <div>
+                            <h2>Nuestros Valores</h2>
+                            <p>Nos enfocamos en sostenibilidad, calidad artesanal y satisfacción del cliente.</p>
+                        </div>
+                    </div>
+                </div>
+            `),
+            catalog: new Page(`
+                <div>
+                    <h1>Catálogo de Tallados</h1>
+                    <div>
+                        ${products.map(product => `
+                            <div>
+                                <div>
+                                    <img src="${product.image}" alt="${product.title}">
+                                    <div>
+                                        <h5>${product.title}</h5>
+                                        <p>${product.description}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        `).join('')}
+                    </div>
+                </div>
+            `)
+        };
+
+        // Router para manejar la navegación
+        class Router {
+            navigate(page) {
+                console.log("Navigating to:", page);
+                const url = new URL(window.location);
+                url.hash = page;
+                window.history.pushState({}, '', url);
+                
+                document.getElementById('content').innerHTML = pages[page].render();
+            }
+        }
+
+        const router = new Router();
+
         // Inicializa la página en "home"
-        navigate('home');
+        router.navigate('home');
     </script>
-    <!-- Botón de WhatsApp -->
-<a href="https://wa.me/XXXXXXXXXXX" class="whatsapp-button" target="_blank" style="position: fixed; bottom: 20px; right: 20px; background-color: #25d366; color: white; border-radius: 50%; padding: 15px; font-size: 24px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); text-align: center;">
-    <i class="fab fa-whatsapp"></i>
-</a>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </body>
 </html>
